# notion-os-kit

./: .gitignore  README.md  pyproject.toml
docs/: index.md
docs/decisions/: 20260708_notion_os_generation_first_skills.md  20260708_notion_os_kit_profile_state_model.md
docs/references/: README.md
docs/runbooks/: notion_os_kit_doctor.md
examples/personal-os/: profile.yaml  state.example.yaml
kit/: README.md
kit/schemas/: profile.schema.yaml  state.schema.yaml
kit/scripts/: README.md  notion-os-kit
kit/scripts/lib/: common.sh  connect.sh  doctor.sh  install-skills.sh  today-summary.sh  today_summary.py  token-report.sh
kit/skills/notion-os/: SKILL.md
kit/templates/: area.md  inbox.md  knowledge.md  meeting.md  project.md  ticket.md  today-summary.md  workstream.md
src/notion_os_kit/: cli.py
