[project]
name = "notion-os-kit"
version = "0.1.0"
description = "Generic Notion OS profile tooling and reconciliation CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
nok = "notion_os_kit.cli:main"
notion-os-kit = "notion_os_kit.cli:main"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notion_os_kit"]

[tool.hatch.build.targets.wheel.force-include]
"kit" = "notion_os_kit/kit"
"examples" = "notion_os_kit/examples"
"docs" = "notion_os_kit/docs"

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "src/**/*.py" },
  { file = "kit/scripts/**" },
  { file = "kit/templates/**" },
  { file = "examples/**" },
  { file = "docs/**" },
  { git = { commit = true } },
]
